Set up basic project structure and command flow.

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,10 @@ package_dir =
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    importlib-metadata; python_version<"3.8"
+    importlib-metadata; python_version<"3.11"
+    channels["daphne"]
+    channels-redis
+    discord.py
     django
 
 
@@ -71,10 +74,10 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = django_discord.django_discord_py.module:function
+#     script_name = django_discord.py.module:function
 # For example:
 # console_scripts =
-#     fibonacci = django_discord.django_discord_py.skeleton:run
+#     fibonacci = django_discord.py.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -86,7 +89,7 @@ testing =
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this pytest issue.
 addopts =
-    --cov django_discord.django_discord_py --cov-report term-missing
+    --cov django_discord.py --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -106,7 +109,7 @@ formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
-max_line_length = 88
+max_line_length = 1000
 extend_ignore = E203, W503
 # ^  Black-compatible
 #    E203 and W503 have edge cases handled by black
@@ -121,7 +124,8 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 4.3.1
-package = django_discord_py
+# Replaced afterward with just `py`
+package = py_safe
 extensions =
     github_actions
     gitlab
