--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.11"
-    channels["daphne"]
+    channels[daphne]
     channels-redis
     discord.py
     django
