--- a/setup.cfg
+++ b/setup.cfg
@@ -82,8 +82,8 @@ testing =
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 console_scripts =
-    discord_bot = django_discord.py.cli.run_asgi_workers
-    django_server = django_discord.py.cli.run_daphne_server
+    discord_bot = django_discord.py.cli:run_asgi_workers
+    django_server = django_discord.py.cli:run_daphne_server
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
