Remove coveralls stuff for now.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,25 +74,25 @@ jobs:
           pipx run tox
           --installpkg '${{ needs.prepare.outputs.wheel-distribution }}'
           -- -rFEx --durations 10 --color yes
-      - name: Generate coverage report
-        run: pipx run coverage lcov -o coverage.lcov
-      - name: Upload partial coverage report
-        uses: coverallsapp/github-action@master
-        with:
-          path-to-lcov: coverage.lcov
-          github-token: ${{ secrets.github_token }}
-          flag-name: ${{ matrix.platform }} - py${{ matrix.python }}
-          parallel: true
+#      - name: Generate coverage report
+#        run: pipx run coverage lcov -o coverage.lcov
+#      - name: Upload partial coverage report
+#        uses: coverallsapp/github-action@master
+#        with:
+#          path-to-lcov: coverage.lcov
+#          github-token: ${{ secrets.github_token }}
+#          flag-name: ${{ matrix.platform }} - py${{ matrix.python }}
+#          parallel: true
 
-  finalize:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Finalize coverage report
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel-finished: true
+#  finalize:
+#    needs: test
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Finalize coverage report
+#        uses: coverallsapp/github-action@master
+#        with:
+#          github-token: ${{ secrets.GITHUB_TOKEN }}
+#          parallel-finished: true
 
   publish:
     needs: finalize
