Add ipython shell, update README with instructions on how to send messages. Add a message sender to the channel consumer.

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,8 +53,9 @@ install_requires =
     channels-redis
     discord.py
     django
+    django-extensions
     django-split-settings
-
+    ipython
 
 [options.packages.find]
 where = src
