Fix PYPI description.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = django-discord-py
-description = Add a short description here!
+description = Easy to use, easy to setup discord bots with django integration
 author = Collin Sage
 author_email = 3229549+MrSage@users.noreply.github.com
 license = MIT
