Switch up commands to avoid conflicts between entrypoints and module names.

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,8 +84,9 @@ testing =
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 console_scripts =
-    discord_bot = django_discord.py.cli:run_asgi_workers
-    django_server = django_discord.py.cli:run_daphne_server
+    django-discord.py = django_discord.py.__main__:main
+    discord-bot = django_discord.py.cli:run_asgi_workers
+    django-server = django_discord.py.cli:run_daphne_server
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
