--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,8 +58,8 @@ repos:
   hooks:
   - id: autopep8
 
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  # Ruff version.
-  rev: 'v0.0.253'
-  hooks:
-    - id: ruff
+#- repo: https://github.com/charliermarsh/ruff-pre-commit
+#  # Ruff version.
+#  rev: 'v0.0.253'
+#  hooks:
+#    - id: ruff
